# FastAPI-mongoDB-AWS-fileupload

./: LICENSE  README.md  app.py  config.py  database.py  main.py  models.py  pyproject.toml  routes.py  upload.py
app/: app.py  config.py  database.py  models.py  routes.py
