[tool.poetry]
name = "fastapi fileupload"
version = "0.1.0"
description = ""
authors = ["rein14 <reinrich14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
beanie = "^1.19.1"
boto3 = "^1.26.140"

[tool.poetry.dev-dependencies]
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
motor = "^3.1.2"
aiofiles = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
